WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115794
[Qt] Crash when loading link to audio file
https://bugs.webkit.org/show_bug.cgi?id=115794
Summary
[Qt] Crash when loading link to audio file
Allan Sandfeld Jensen
Reported
2013-05-08 04:47:02 PDT
Go to
http://en.wikipedia.org/wiki/File:Beatles_helter_skelter.ogg
and click on the link Beatles_helter_skelter.ogg. This will crash WebKit due to a null pointer frame.
Attachments
Patch
(1.40 KB, patch)
2013-05-08 04:48 PDT
,
Allan Sandfeld Jensen
jturcotte
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Allan Sandfeld Jensen
Comment 1
2013-05-08 04:48:14 PDT
Created
attachment 201058
[details]
Patch
Jocelyn Turcotte
Comment 2
2013-05-08 05:33:20 PDT
Comment on
attachment 201058
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=201058&action=review
> Source/WebCore/ChangeLog:3 > + [Qt] Crash when loading link to audio file
I believe this isn't Qt-specific.
Allan Sandfeld Jensen
Comment 3
2013-05-08 06:00:19 PDT
Committed
r149733
: <
http://trac.webkit.org/changeset/149733
>
Benjamin Poulain
Comment 4
2013-05-12 19:56:55 PDT
Why doesn't this include tests???
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug