Crash when loading link to audio file https://bugs.webkit.org/show_bug.cgi?id=115794

Reviewed by Jocelyn Turcotte.

Do not access a null pointer frame.

* loader/appcache/ApplicationCacheHost.cpp:
(WebCore::ApplicationCacheHost::isApplicationCacheEnabled):

Canonical link: https://commits.webkit.org/134194@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149733 268f45cc-cd09-0410-ab3c-d52691b4dbfc